crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@variables_in_cairo_m___constants.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Variables in Cairo-M - Constants"
input_file: mdtest/01-basics/02-variables.md
---
Source:
const POW2: [u32; 3] = [1, 2, 4];

fn test_const() -> u32 {
    return POW2[0] + POW2[1] + POW2[2];
}
============================================================
Generated CASM:
test_const:
test_const:
test_const_0:
   0: 23 1 0 0             // u32([fp + 0], [fp + 1]) = u32(1)
   1: 23 2 0 2             // u32([fp + 2], [fp + 3]) = u32(2)
   2: 15 0 2 4             // u32([fp + 4], [fp + 5]) = u32([fp + 0], [fp + 1]) U32Add u32([fp + 2], [fp + 3])
   3: 23 4 0 6             // u32([fp + 6], [fp + 7]) = u32(4)
   4: 15 4 6 8             // u32([fp + 8], [fp + 9]) = u32([fp + 4], [fp + 5]) U32Add u32([fp + 6], [fp + 7])
   5: 4 8 0 -4             // Return value 0 slot 0: [fp -4] = [fp + 8] + 0
   6: 4 9 0 -3             // Return value 0 slot 1: [fp -3] = [fp + 9] + 0
   7: 11 _ _ _             // return
